backend/overlays/prod/canary/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: backend
spec:
  template:
    spec:
      containers:
        - name: backend-pod
          image: vikasprince/MERN-Backend:v2  # Canary version of the image
          imagePullPolicy: IfNotPresent
